--- a/SapReader.csproj
+++ b/SapReader.csproj
@@ -80,6 +80,12 @@
     <Compile Include="..\..\LS\LSAS.cs">
       <Link>LSAS.cs</Link>
     </Compile>
+    <Compile Include="Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="NetConnection.cs" />
     <Compile Include="Plugy.cs">
       <SubType>Form</SubType>
@@ -112,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Crypy.resx">
       <DependentUpon>Crypy.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Plugy.resx">
       <DependentUpon>Plugy.cs</DependentUpon>
