--- a/SapReader.csproj
+++ b/SapReader.csproj
@@ -27,7 +27,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <AssemblyVersion>1.3.2.0</AssemblyVersion>
+    <AssemblyVersion>1.3.2.1</AssemblyVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -179,11 +179,11 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\LS\Cyan.cs">
+      <Link>Cyan.cs</Link>
+    </Compile>
     <Compile Include="..\..\LS\DHKE.cs">
       <Link>DHKE.cs</Link>
-    </Compile>
-    <Compile Include="..\..\LS\FastConnection.cs">
-      <Link>FastConnection.cs</Link>
     </Compile>
     <Compile Include="..\..\LS\FastLua.cs">
       <Link>FastLua.cs</Link>
