--- a/SapReader.csproj
+++ b/SapReader.csproj
@@ -27,7 +27,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <AssemblyVersion>1.3.2.1</AssemblyVersion>
+    <AssemblyVersion>1.3.2.8</AssemblyVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -204,6 +204,12 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="At.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="At.Designer.cs">
+      <DependentUpon>At.cs</DependentUpon>
+    </Compile>
     <Compile Include="Drag.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -250,6 +256,9 @@
     </Compile>
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="At.resx">
+      <DependentUpon>At.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Drag.resx">
       <DependentUpon>Drag.cs</DependentUpon>
